--- a/pug/index.pug
+++ b/pug/index.pug
@@ -45,6 +45,6 @@ html
               a.site-link(href="photo" alt="photo") photo
         .menu-item 
           span.menu-button#contact contact
-        .dancing-image
+        //- .dancing-image
     script(src="assets/js/jquery.js")
     script(src="assets/js/app.js")
