--- a/sass/palette.sass
+++ b/sass/palette.sass
@@ -1,9 +1,13 @@
 $blue: #5555ff
 $golden: #ffff55
 $red: #ff5555
-$rose: #ff88cb
-$stranger: #112233
+$green: #55ff55
 
+$stranger: #112233
+$bluegrey: #52586e
+
+
+$link-color: lighten(saturate($bluegrey, 50%), 20%)
 $form-color: $stranger
 $bg-color: black
-$colorList: $blue, $golden, $red, $rose
+$colorList: $link-color
