--- a/sass/index.sass
+++ b/sass/index.sass
@@ -23,9 +23,21 @@ a, a:visited, a:hover, a:focus
   text-decoration: none
   color: currentColor
 
+ul
+  list-style: none
+  padding: 0
+
 textarea
   resize: none
 
+.load-images
+  visibility: hidden
+  height: 0
+  width: 0
+  img
+    position: fixed
+    height: 0
+    width: 0
 .body-container
   position: fixed
   width: 40vw
@@ -66,11 +78,9 @@ textarea
     margin-bottom: 0
     // margin-left: 10vw
     &-item
-      opacity: 0
       position: relative
       display: block
       padding: 5px 10px
-      animation: fadeIn 500ms forwards 3s
       @for $i from 1 through 4
         &:nth-child(#{$i})
           .menu-button:hover
@@ -168,9 +178,45 @@ textarea
     +dance(3s)
   &:not(.dance)
     left: 70%
-    background-image: url(../img/dancing/last.png)
+    background-image: url(../img/dancing/13.png)
 
+.leftImage
+  z-index: -2
+  position: fixed
+  top: -250px
+  left: -170px
+  &.fadeInLate
+    opacity: 0
+    animation: fadeIn 500ms forwards 3s
 
+.nav-opener
+  z-index: 3
+  cursor: pointer
+  position: fixed
+  padding: 2px
+  color: white
+  font-size: 50px
+  margin: 5px null null 10px
+  &.active
+    color: black
+.mobile-nav
+  z-index: 2
+  position: fixed
+  height: 100%
+  width: 25%
+  background-color: white
+  transform: translateX(-100%)
+  transition: transform 300ms ease-out
+  &.active
+    transform: translateX(0px)
+
+  .nav-items
+    font-size: 24px
+    padding-top: 75px
+    text-align: center
+    .nav-item
+      margin-bottom: 40px
+      cursor: pointer
 
 
 // left: -100% -> 70%
@@ -190,5 +236,5 @@ textarea
   97.5%, 100%
     left: 75%
     visibility: visible
-    background-image: url(../img/dancing/last.png)
+    background-image: url(../img/dancing/13.png)
     // transform: translateX(-100%)
