complete animation and mobile nav bar. Yet to be tested on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -173,7 +173,7 @@ textarea {
     animation: dance 3s linear forwards;
     -webkit-animation: dance 3s linear forwards; }
   .dancing-image:not(.dance) {
-    left: 70%;
+    left: 75%;
     background-image: url(../img/dancing/13.png); }
 
 .leftImage {
@@ -214,6 +214,9 @@ textarea {
       margin-bottom: 40px;
       cursor: pointer; }
 
+@media screen and (min-width: 992px) {
+  .mobile-nav, .nav-items, .nav-opener {
+    display: none; } }
 @keyframes dance {
   0%, 7.5% {
     background-image: none;
