--- a/pug/index.pug
+++ b/pug/index.pug
@@ -24,7 +24,7 @@ html
         .nav-item
           a.site-link(href="/media" alt="video") media
         .nav-item
-          p.contact contact
+          span.contact contact
     .body-container
       .contact-form
         span x
@@ -64,7 +64,7 @@ html
         .menu-item 
           span.menu-button.contact contact
         .dancing-image
-    img.leftImage(src='assets/img/dancing/5.png')
+    //- img.leftImage(src='assets/img/dancing/5.png')
     
     .load-images
       img(src='assets/img/dancing/1.png')
