refactor sass and create /bio starter page. Move to use Pug templates

--- a/sass/_palette.sass
+++ b/sass/_palette.sass
@@ -7,7 +7,8 @@ $stranger: #112233
 $bluegrey: #52586e
 
 
-$link-color: lighten(saturate($bluegrey, 50%), 20%)
-$form-color: $stranger
 $bg-color: black
+$link-color: lighten(saturate($bluegrey, 50%), 20%)
+$accent: $link-color
+$form-color: $stranger
 $colorList: $link-color
