--- a/index.pug
+++ b/index.pug
@@ -40,7 +40,7 @@ block content
             a.site-link(href="/media" alt="photo") photo
       .menu-item 
         span.menu-button.contact contact
-      .dancing-image
+      .dancing-image.dance
   //- img.leftImage(src='assets/img/dancing/5.png')
   
   .load-images
