refactor to have contact for on every page with Jade templates

--- a/index.pug
+++ b/index.pug
@@ -3,15 +3,6 @@ block title
   title Emily Hansel
 block content
   .body-container
-    .contact-form
-      span x
-      form(method="POST", action="https://formspree.io/emilylhansel@gmail.com")
-        p Fill out the form below or contact me at <a href="mailto:emilylhansel@gmail.com">emilylhansel@gmail.com</a>
-        input(tabindex="1",  type="text", name="name", placeholder="Name")
-        input(tabindex="2",  type="email", name="_replyto", placeholder="Email")
-        input(type="hidden", name="_next", value="#submitted")
-        textarea(tabindex="3",  name="message" placeholder="Type your message here")
-        input(tabindex="4",  type="submit" value="Send")
     h1
       a(href="", alt="Emily Hansel") Emily Hansel
     h4 Dancer
@@ -40,7 +31,7 @@ block content
             a.site-link(href="/media" alt="photo") photo
       .menu-item 
         span.menu-button.contact contact
-      .dancing-image.dance
+      .dancing-image
   //- img.leftImage(src='assets/img/dancing/5.png')
   
   .load-images
