--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -553,16 +553,19 @@ textarea {
 
 .contact-form {
   z-index: 2;
-  position: absolute;
+  position: fixed;
   display: none;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
+  height: 280px;
+  width: 550px;
   padding: 10px 10px;
+  left: 50%;
+  top: 50%;
+  margin: -140px 0px 0px -275px;
   font-family: monospace;
   background-color: white;
   transform-origin: bottom left; }
+  .contact-form form {
+    text-align: center; }
   .contact-form p {
     margin: 0px auto 5px;
     letter-spacing: 0.2px; }
@@ -588,7 +591,7 @@ textarea {
     margin: 0 1%;
     height: 3em;
     padding: 5px;
-    width: 43%; }
+    width: 44%; }
   .contact-form textarea {
     width: 90%;
     height: 10em;
