update /media page to stack video and photos. need to create a creative carousel

--- a/index.pug
+++ b/index.pug
@@ -26,9 +26,9 @@ block content
         span.menu-button  media
         ul.sub-menu 
           li 
-            a.site-link(href="/media" alt="video") video
+            a.site-link(href="/media#video" alt="video") video
           li 
-            a.site-link(href="/media" alt="photo") photo
+            a.site-link(href="/media#photo" alt="photo") photo
       .menu-item 
         span.menu-button.contact contact
       .dancing-image
