--- a/sass/index.sass
+++ b/sass/index.sass
@@ -44,23 +44,11 @@ $font-caption: $font-lato
   text-align: center
 
   h1
-    // display: inline-block
-    font-size: 80px
-    font-weight: 100
-    text-transform: uppercase
-    color: white
-    margin: 0 auto
     // &:hover
-    //   color: saturate(lighten($form-color, 40%), 30%)
-
+    //   color: saturate(lighten($form-color, 40%), 30%
   h4
     display: inline-block
-    font-weight: 300
-    font-size: 26px
     letter-spacing: 9px
-    margin: 0
-    color: white
-    text-transform: lowercase
     @media screen and (min-width: 1120px)
       &:first-of-type:after
         content: " | "
