--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -404,11 +404,6 @@
     margin-top: 50px; }
     .body-container.bio .bio-container h3 {
       text-align: left;
-      font-size: 40px;
-      font-weight: 100;
-      text-transform: uppercase;
-      color: white;
-      margin: 0 auto;
       padding: 5px 0px; }
     .body-container.bio .bio-container p {
       display: inline-block;
@@ -463,19 +458,46 @@ ul {
 textarea {
   resize: none; }
 
-.media {
-  display: flex; }
-  .media .card {
+h1 {
+  font-size: 80px;
+  font-weight: 100;
+  text-transform: uppercase;
+  color: white;
+  margin: 0 auto; }
+
+h3 {
+  font-size: 40px;
+  font-weight: 100;
+  text-transform: uppercase;
+  color: white;
+  margin: 0 auto; }
+
+h4 {
+  font-weight: 300;
+  font-size: 26px;
+  margin: 0;
+  color: white;
+  text-transform: lowercase; }
+
+.media h3 {
+  padding: 20px 0px 10px;
+  text-align: center; }
+.media .media-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+  .media .media-container .card {
+    margin: 1% 3%;
     width: auto;
     height: auto;
     position: relative;
-    width: 640px;
-    height: 360px; }
-    .media .card iframe {
+    width: 40%;
+    height: 315px; }
+    .media .media-container .card iframe {
       position: absolute;
       width: 100%;
       height: 100%; }
-    .media .card .caption {
+    .media .media-container .card .caption {
       position: absolute;
       display: none;
       bottom: 45px;
@@ -511,20 +533,9 @@ textarea {
   transform: translate3d(0px, -50%, 0px);
   margin-left: -20vw;
   text-align: center; }
-  .body-container h1 {
-    font-size: 80px;
-    font-weight: 100;
-    text-transform: uppercase;
-    color: white;
-    margin: 0 auto; }
   .body-container h4 {
     display: inline-block;
-    font-weight: 300;
-    font-size: 26px;
-    letter-spacing: 9px;
-    margin: 0;
-    color: white;
-    text-transform: lowercase; }
+    letter-spacing: 9px; }
     @media screen and (min-width: 1120px) {
       .body-container h4:first-of-type:after {
         content: " | "; } }
