--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,16 +1,22 @@
-.media {
-  display: flex; }
-  .media .card {
+.media h3 {
+  padding: 20px 0px 10px;
+  text-align: center; }
+.media .media-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+  .media .media-container .card {
+    margin: 1% 3%;
     width: auto;
     height: auto;
     position: relative;
-    width: 640px;
-    height: 360px; }
-    .media .card iframe {
+    width: 40%;
+    height: 315px; }
+    .media .media-container .card iframe {
       position: absolute;
       width: 100%;
       height: 100%; }
-    .media .card .caption {
+    .media .media-container .card .caption {
       position: absolute;
       display: none;
       bottom: 45px;
