--- a/media/index.pug
+++ b/media/index.pug
@@ -3,7 +3,19 @@ block title
   title Emily Hansel | Media
 block content
   .media
-    .card
-      iframe(src="https://player.vimeo.com/video/151188661", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
-      .caption
-        p <a href="https://vimeo.com/151188661">Not Empty</a> by <a href="https://vimeo.com/user47620788">Emily Hansel</a>
+    .home-button
+      a(href="/" alt="Emily") E
+    h3#video Video
+    .media-container.video-container
+      .card
+        iframe(src="https://player.vimeo.com/video/151188661?title=0&byline=0&portrait=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
+        .caption
+          p <a href="https://vimeo.com/151188661">Not Empty</a> by <a href="https://vimeo.com/user47620788">Emily Hansel</a>
+      .card
+        iframe(src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
+      .card
+        iframe(src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
+      .card
+        iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
+    h3#photo Photo
+    .media-container.photo-container
