--- a/sass/_reset.sass
+++ b/sass/_reset.sass
@@ -17,3 +17,24 @@ ul
 
 textarea
   resize: none
+
+h1
+  font-size: 80px
+  font-weight: 100
+  text-transform: uppercase
+  color: white
+  margin: 0 auto
+
+h3
+  font-size: 40px
+  font-weight: 100
+  text-transform: uppercase
+  color: white
+  margin: 0 auto
+
+h4
+  font-weight: 300
+  font-size: 26px
+  margin: 0
+  color: white
+  text-transform: lowercase
