--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,21 +1,26 @@
-@import palette
 .media
-  display: flex
-
-  .card
-    width: auto
-    height: auto
-    position: relative
-    width: 640px
-    height: 360px
-    iframe
-      position: absolute
-      width: 100%
-      height: 100%
-    .caption
-      position: absolute
-      display: none
-      bottom: 45px
-      right: 0
-      background-color: rgba(0,0,0,0.7)
-      padding: 5px 10px
+  h3
+    padding: 20px 0px 10px
+    text-align: center
+  .media-container
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-around
+    .card
+      margin: 1% 3%
+      width: auto
+      height: auto
+      position: relative
+      width: 40%
+      height: 315px
+      iframe
+        position: absolute
+        width: 100%
+        height: 100%
+      .caption
+        position: absolute
+        display: none
+        bottom: 45px
+        right: 0
+        background-color: rgba(0,0,0,0.7)
+        padding: 5px 10px
