--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -479,8 +479,10 @@ h4 {
   color: white;
   text-transform: lowercase; }
 
+.media .home-button {
+  left: 5px; }
 .media h3 {
-  padding: 20px 0px 10px;
+  padding: 40px 0px 20px;
   text-align: center; }
 .media .media-container {
   display: flex;
@@ -504,6 +506,18 @@ h4 {
       right: 0;
       background-color: rgba(0, 0, 0, 0.7);
       padding: 5px 10px; }
+.media .carousel {
+  width: 100%;
+  height: 50vh;
+  position: relative; }
+  .media .carousel img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transform-origin: top center; }
+    .media .carousel img:nth-of-type(2) {
+      left: 70%; }
 
 .load-images {
   visibility: hidden;
