--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,6 +1,8 @@
 .media
+  .home-button
+    left: 5px
   h3
-    padding: 20px 0px 10px
+    padding: 40px 0px 20px
     text-align: center
   .media-container
     display: flex
@@ -24,3 +26,16 @@
         right: 0
         background-color: rgba(0,0,0,0.7)
         padding: 5px 10px
+  .carousel
+    width: 100%
+    height: 50vh
+    position: relative
+
+    img
+      position: absolute
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%) scale(1)
+      transform-origin: top center
+      &:nth-of-type(2)
+        left: 70%
