update to use relative paths

--- a/statement/index.pug
+++ b/statement/index.pug
@@ -1,6 +1,9 @@
 extends ../pug/_main_template.pug
 block title
   title Emily Hansel | Artist Statement
+  link(rel="shortcut icon", href="../assets/img/favicon.ico")
+  link(rel="icon", href="../assets/img/favicon.ico", type="image/x-icon")
+  link(rel="stylesheet", href="../assets/css/index.css")
 block content
   .home-button
     a(href="/" alt="Emily") E
@@ -33,3 +36,4 @@ block content
         communicate ideas about my choreography via spoken or written language. Dance is capable of 
         expressing different things than words can, and <span class="bio-highlight">I</span> do not attempt to impose the confines of 
         language upon dance. Thus, <span class="bio-highlight">I</span> usually let my work speak for itself.
+block scripts
