--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -514,7 +514,7 @@ h4 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate3d(-50%, -50%, 0px) scale(1);
     transform-origin: top center; }
     .media .carousel img:nth-of-type(2) {
       left: 70%; }
