--- a/index.pug
+++ b/index.pug
@@ -1,6 +1,9 @@
 extends ./pug/_main_template.pug
 block title 
   title Emily Hansel
+  link(rel="shortcut icon", href="./assets/img/favicon.ico")
+  link(rel="icon", href="./assets/img/favicon.ico", type="image/x-icon")
+  link(rel="stylesheet", href="./assets/css/index.css")
 block content
   .body-container
     h1
@@ -48,3 +51,6 @@ block content
     img(src='assets/img/dancing/11.png')
     img(src='assets/img/dancing/12.png')
     img(src='assets/img/dancing/13.png')
+block scripts
+  script(src="./assets/js/jquery.js")
+  script(src="./assets/js/app.js")
