--- a/media/index.pug
+++ b/media/index.pug
@@ -1,6 +1,9 @@
 extends ../pug/_main_template.pug
 block title
   title Emily Hansel | Media
+  link(rel="shortcut icon", href="../assets/img/favicon.ico")
+  link(rel="icon", href="../assets/img/favicon.ico", type="image/x-icon")
+  link(rel="stylesheet", href="../assets/css/index.css")
 block content
   .media
     .home-button
@@ -24,5 +27,6 @@ block content
         //- img(src="../assets/img/dancing/2.png", alt="1", height="300px")
           
 block scripts
-  script(src="/assets/js/jquery.mousewheel.min.js")
-  script(src="/assets/js/carousel.js")
+  script(src="../assets/js/jquery.js")
+  script(src="../assets/js/jquery.mousewheel.min.js")
+  script(src="../assets/js/carousel.js")
