--- a/sass/media.sass
+++ b/sass/media.sass
@@ -35,7 +35,7 @@
       position: absolute
       top: 50%
       left: 50%
-      transform: translate(-50%, -50%) scale(1)
+      transform: translate3d(-50%, -50%, 0px) scale(1)
       transform-origin: top center
       &:nth-of-type(2)
         left: 70%
