make menu fade in delayed. Finish first draft of carousel

--- a/index.pug
+++ b/index.pug
@@ -34,7 +34,7 @@ block content
             a.site-link(href="/media#photo" alt="photo") photo
       .menu-item 
         span.menu-button.contact contact
-      .dancing-image
+      .dancing-image.dance
   //- img.leftImage(src='assets/img/dancing/5.png')
   
   .load-images
@@ -49,8 +49,6 @@ block content
     img(src='assets/img/dancing/9.png')
     img(src='assets/img/dancing/10.png')
     img(src='assets/img/dancing/11.png')
-    img(src='assets/img/dancing/12.png')
-    img(src='assets/img/dancing/13.png')
 block scripts
   script(src="./assets/js/jquery.js")
   script(src="./assets/js/app.js")
