--- a/media/index.pug
+++ b/media/index.pug
@@ -8,7 +8,8 @@ block content
   .media
     .home-button
       a(href="/" alt="Emily") E
-    h3#video Video
+        img(src="../assets/img/dancing/crop/3.png")
+    //- h3#video Video
     //- .media-container.video-container
       .card
         iframe(src="https://player.vimeo.com/video/151188661?title=0&byline=0&portrait=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
@@ -20,11 +21,15 @@ block content
         iframe(src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
       .card
         iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
-    h3#photo Photo
+    //- h3#photo Photo
     .media-container.photo-container
       .carousel
-        img(src="../assets/img/dancing/1.png", alt="1", height="300px")
-        //- img(src="../assets/img/dancing/2.png", alt="1", height="300px")
+        img(src="../assets/img/dancing/crop/1.png", alt="1", height="300px")
+        img(src="../assets/img/dancing/crop/2.png", alt="1", height="300px")
+        img(src="../assets/img/dancing/crop/3.png", alt="1", height="300px")
+        img(src="../assets/img/dancing/crop/1.png", alt="1", height="300px")
+          
+          
           
 block scripts
   script(src="../assets/js/jquery.js")
