--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -31,9 +31,10 @@
   position: relative; }
   .media .carousel img {
     position: absolute;
+    display: none;
     top: 50%;
     left: 50%;
-    transform: translate3d(-50%, -50%, 0px) scale(1);
+    transform: translate3d(-50%, -50%, 0px) scale(1.7);
     transform-origin: top center; }
     .media .carousel img:nth-of-type(2) {
       left: 70%; }
