--- a/sass/_animations.sass
+++ b/sass/_animations.sass
@@ -22,40 +22,40 @@
   -webkit-animation: fadeIn $time linear forwards
   animation: fadeIn $time linear forwards
 
-@-webkit-keyframes fadeIn
-  0%, 7.5%
-    background-image: none
-    visibility: visible
-    left: -86.92308%
-  @for $i from 1 through 12
-    #{$i*90/12}%, #{$i*90/12  + 2.99}%
-      background-image: url(../img/dancing/#{$i}.png)
-      visibility: visible
-      left: -100% + $i*175%/13%
-    #{$i*90/12 + 3}%, #{$i*90/12  + 7.49}%
-      background-image: url(../img/dancing/#{$i}.png)
-      visibility: hidden
-  97.5%, 100%
-    left: 75%
-    visibility: visible
-    background-image: url(../img/dancing/13.png)
+// @-webkit-keyframes fadeIn
+//   0%, 7.5%
+//     background-image: none
+//     visibility: visible
+//     left: -86.92308%
+//   @for $i from 1 through 12
+//     #{$i*90/12}%, #{$i*90/12  + 2.99}%
+//       background-image: url(../img/dancing/#{$i}.png)
+//       visibility: visible
+//       left: -100% + $i*175%/13%
+//     #{$i*90/12 + 3}%, #{$i*90/12  + 7.49}%
+//       background-image: url(../img/dancing/#{$i}.png)
+//       visibility: hidden
+//   97.5%, 100%
+//     left: 75%
+//     visibility: visible
+//     background-image: url(../img/dancing/13.png)
     // transform: translateX(-100%)
 // left: -100% -> 70%
 @keyframes dance
-  0%, 7.5%
-    background-image: none
-    visibility: visible
-    left: -86.92308%
-  @for $i from 1 through 12
-    #{$i*90/12}%, #{$i*90/12  + 2.99}%
+  0%, 8.99%
+    background-image: url(../img/dancing/1.png)
+    visibility: hidden
+    left: -84.09091%
+  @for $i from 1 through 10
+    #{$i*90/10}%, #{$i*90/10  + 2.99}%
       background-image: url(../img/dancing/#{$i}.png)
       visibility: visible
-      left: -100% + $i*175%/13%
-    #{$i*90/12 + 3}%, #{$i*90/12  + 7.49}%
-      background-image: url(../img/dancing/#{$i}.png)
+      left: -100% + $i*175%/11%
+    #{$i*90/10 + 3}%, #{$i*90/10  + 7.49}%
+      background-image: none
       visibility: hidden
   97.5%, 100%
     left: 75%
     visibility: visible
-    background-image: url(../img/dancing/13.png)
+    background-image: url(../img/dancing/11.png)
     // transform: translateX(-100%)
