--- a/sass/media.sass
+++ b/sass/media.sass
@@ -33,9 +33,10 @@
 
     img
       position: absolute
+      display: none
       top: 50%
       left: 50%
-      transform: translate3d(-50%, -50%, 0px) scale(1)
+      transform: translate3d(-50%, -50%, 0px) scale(1.7)
       transform-origin: top center
       &:nth-of-type(2)
         left: 70%
