--- a/statement/index.pug
+++ b/statement/index.pug
@@ -7,33 +7,34 @@ block title
 block content
   .home-button
     a(href="/" alt="Emily") E
+      img(src="../assets/img/dancing/crop/2.png")
   .body-container.bio
     .bio-container
       h3 Artist Statement
       p.
-        <span class="bio-highlight">I</span> respect art that challenges. <span class="bio-highlight">I</span> appreciate when choreographers challenge their dancers, peers, 
-        and audiences. <span class="bio-highlight">I</span> work to challenge myself and to challenge existing paradigms – 
-        both within and beyond dance. <span class="bio-highlight">I</span> constantly seek out the new, exploring things that 
-        <span class="bio-highlight">I</span> have never done before and things that no one has ever done before. 
-        <span class="bio-highlight">I</span> admire people who can change my mind and <span class="bio-highlight">I</span> enjoy having my mind changed 
-        because it indicates that <span class="bio-highlight">I</span> have learned something. <span class="bio-highlight">I</span> admire art that dissatisfies 
+        I respect art that challenges. I appreciate when choreographers challenge their dancers, peers, 
+        and audiences. I work to challenge myself and to challenge existing paradigms – 
+        both within and beyond dance. I constantly seek out the new, exploring things that 
+        I have never done before and things that no one has ever done before. 
+        I admire people who can change my mind and I enjoy having my mind changed 
+        because it indicates that I have learned something. I admire art that dissatisfies 
         or irritates its audiences because great art has the capacity to do more than simply please all people.
       p.
-        <span class="bio-highlight">I</span> am interested in witnessing – and participating in – sincerity and honesty onstage. <span class="bio-highlight">I</span> admire dancers 
+        I am interested in witnessing – and participating in – sincerity and honesty onstage. I admire dancers 
         who can simply be and do during performance rather than those who simulate or put on anything 
-        artificial. In order to portray an emotion or a sensation, <span class="bio-highlight">I</span> enter a scenario in which <span class="bio-highlight">I</span> truly 
-        feel the emotion or sensation. Instead of pretending to feel something, <span class="bio-highlight">I</span> am able to actually 
+        artificial. In order to portray an emotion or a sensation, I enter a scenario in which I truly 
+        feel the emotion or sensation. Instead of pretending to feel something, I am able to actually 
         experience it and whatever movement results is therefore entirely genuine.
       p.
-        As a choreographer, <span class="bio-highlight">I</span> am interested in turning the stage into a world in which dancers can exist. 
-        <span class="bio-highlight">I</span> value diversity and individuality among a group of performers. <span class="bio-highlight">I</span> am drawn to artists with 
-        distinctive voices and <span class="bio-highlight">I</span> respect my dancers as individuals with their own wealth of experiences. 
-        Accordingly, <span class="bio-highlight">I</span> value unison of intent among a group of performers more than <span class="bio-highlight">I</span> value perfect physical unison.
+        As a choreographer, I am interested in turning the stage into a world in which dancers can exist. 
+        I value diversity and individuality among a group of performers. I am drawn to artists with 
+        distinctive voices and I respect my dancers as individuals with their own wealth of experiences. 
+        Accordingly, I value unison of intent among a group of performers more than I value perfect physical unison.
       p.
-        <span class="bio-highlight">I</span> create work in order to share my ideas with other people. <span class="bio-highlight">I</span> do not aim to please or to displease 
-        my audiences; <span class="bio-highlight">I</span> want merely to expose them to my ideas and be a witness to their reactions. 
-        <span class="bio-highlight">I</span> strive to interact with audiences through my work. However, <span class="bio-highlight">I</span> often find it difficult to 
+        I create work in order to share my ideas with other people. I do not aim to please or to displease 
+        my audiences; I want merely to expose them to my ideas and be a witness to their reactions. 
+        I strive to interact with audiences through my work. However, I often find it difficult to 
         communicate ideas about my choreography via spoken or written language. Dance is capable of 
-        expressing different things than words can, and <span class="bio-highlight">I</span> do not attempt to impose the confines of 
-        language upon dance. Thus, <span class="bio-highlight">I</span> usually let my work speak for itself.
+        expressing different things than words can, and I do not attempt to impose the confines of 
+        language upon dance. Thus, I usually let my work speak for itself.
 block scripts
