add caption to carousel

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -303,10 +303,17 @@ h4 {
     display: none;
     top: 50%;
     left: 50%;
-    transform: translate3d(-50%, -50%, 0px) scale(1.7);
+    transform: translate3d(-50%, -50%, 0px) scale(1.5);
     transform-origin: top center; }
     .media .carousel img:nth-of-type(2) {
       left: 70%; }
+.media .caption {
+  display: inline-block;
+  color: white;
+  font-size: 40px;
+  font-family: "Lato", sans-serif;
+  font-weight: 100;
+  margin-top: 50px; }
 
 .load-images {
   visibility: hidden;
