--- a/media/index.pug
+++ b/media/index.pug
@@ -9,6 +9,26 @@ block content
     .home-button
       a(href="/" alt="Emily") E
         img(src="../assets/img/dancing/crop/3.png")
+
+    h3#photo Photo
+    .media-container.photo-container
+      .carousel
+        img(src="../assets/img/dancing/carousel/1.jpg"  data-caption="1"  height="200px")
+        img(src="../assets/img/dancing/carousel/2.png"  data-caption="2"  height="200px")
+        img(src="../assets/img/dancing/carousel/3.jpg"  data-caption="3"  height="200px")
+        img(src="../assets/img/dancing/carousel/4.jpg"  data-caption="4"  height="200px")
+        img(src="../assets/img/dancing/carousel/5.jpg"  data-caption="5"  height="200px")
+        img(src="../assets/img/dancing/carousel/6.png"  data-caption="6"  height="200px")
+        img(src="../assets/img/dancing/carousel/7.png"  data-caption="7"  height="200px")
+        img(src="../assets/img/dancing/carousel/8.png"  data-caption="8"  height="200px")
+        img(src="../assets/img/dancing/carousel/9.png"  data-caption="9"  height="200px")
+        img(src="../assets/img/dancing/carousel/10.png" data-caption="10" height="200px")
+        img(src="../assets/img/dancing/carousel/11.png" data-caption="11" height="200px")
+        img(src="../assets/img/dancing/carousel/12.png" data-caption="12" height="200px")
+        img(src="../assets/img/dancing/carousel/13.png" data-caption="13" height="200px")
+        img(src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px")      
+        img(src="../assets/img/dancing/carousel/15.png" data-caption="15" height="200px")
+      .caption
     //- h3#video Video
     //- .media-container.video-container
       .card
@@ -20,17 +40,7 @@ block content
       .card
         iframe(src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
       .card
-        iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
-    //- h3#photo Photo
-    .media-container.photo-container
-      .carousel
-        img(src="../assets/img/dancing/crop/1.png", alt="1", height="300px")
-        img(src="../assets/img/dancing/crop/2.png", alt="1", height="300px")
-        img(src="../assets/img/dancing/crop/3.png", alt="1", height="300px")
-        img(src="../assets/img/dancing/crop/1.png", alt="1", height="300px")
-          
-          
-          
+        iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)          
 block scripts
   script(src="../assets/js/jquery.js")
   script(src="../assets/js/jquery.mousewheel.min.js")
