--- a/sass/media.sass
+++ b/sass/media.sass
@@ -36,7 +36,14 @@
       display: none
       top: 50%
       left: 50%
-      transform: translate3d(-50%, -50%, 0px) scale(1.7)
+      transform: translate3d(-50%, -50%, 0px) scale(1.5)
       transform-origin: top center
       &:nth-of-type(2)
         left: 70%
+  .caption
+    display: inline-block
+    color: white
+    font-size: 40px
+    font-family: $font-lato
+    font-weight: 100
+    margin-top: 50px
